fix: play button icon alignment on firefox

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -581,6 +581,7 @@ pre tt:after {
     letter-spacing: 1px;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-family: "Roboto", sans-serif;
     padding: 0.3rem 1rem;
     cursor: pointer;
